log/2021-05-12T19:09:44+0800.log
Autotest: Begin at 2021年 05月 12日 星期三 19:09:44 CST
[32m[ found your pageReplace.cpp ][0m
pageReplace.cpp: In function 'void pageReplace(long int*, long int)':
pageReplace.cpp:14:22: error: redeclaration of 'int i'
  register int old(j),i=t[j];
                      ^
pageReplace.cpp:6:31: note: 'int i' previously declared here
  register int rnk(nwAdd>>12), i(rnk&3), j(i<<4);
                               ^
make: *** [main] Error 1
[31m[01m[ compile error ][0m
[33m[01m[ You got 0 (of 100) this time. 2021年 05月 12日 星期三 19:09:49 CST ][0m
